--- a/contact_us/templates/contact_us.html
+++ b/contact_us/templates/contact_us.html
@@ -18,7 +18,7 @@
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="text-end mt-3">
-                    <button class="btn btn-custom-yellow" type="submit">Send</button>
+                    <button class="btn btn-warning" type="submit">Send</button>
                 </div>
             </form>
         </div>
