--- a/templates/401.html
+++ b/templates/401.html
@@ -11,7 +11,7 @@
             <h1 class="my-4">401 error - Unauthorized</h1>
             <p>Access Denied! You must authenticate yourself to access this resource. Please provide valid credentials
                 or log in to continue. You can return to the homepage using the button below. </p>
-            <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
+            <a href="{% url 'home' %}" class="btn btn-warning my-4"> Home</a>
 
         </div>
     </div>
