--- a/templates/403.html
+++ b/templates/403.html
@@ -11,7 +11,7 @@
             <h1 class="my-4">403 error - Forbidden</h1>
             <p>Sorry, you don't have permission to access this resource. You can return to the homepage using the button
                 below. </p>
-            <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
+            <a href="{% url 'home' %}" class="btn btn-warning my-4"> Home</a>
 
         </div>
     </div>
