--- a/templates/503.html
+++ b/templates/503.html
@@ -10,7 +10,7 @@
             <h1 class="my-4">503 Service Unavailable</h1>
             <p>The service is temporarily unavailable. You can return
                 to the homepage using the button below </p>
-            <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
+            <a href="{% url 'home' %}" class="btn btn-warning my-4"> Home</a>
 
         </div>
     </div>
