--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         {{ form|crispy }}
         <div class="text-center">
-            <button class="btn btn-custom-yellow my-3" type="submit" name="action">{% trans "Change Password" %}</button>
+            <button class="btn btn-warning my-3" type="submit" name="action">{% trans "Change Password" %}</button>
         </div>
         
     </form>
