--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -17,7 +17,7 @@
         {% csrf_token %}
         {{ form|crispy }}
         <div class="text-center">
-           <input type="submit" class="my-3 btn btn-custom-yellow" value="{% trans 'Reset My Password' %}" /> 
+           <input type="submit" class="my-3 btn btn-warning" value="{% trans 'Reset My Password' %}" /> 
         </div>
         
     </form>
