--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -14,7 +14,7 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="text-center">
-                    <input class="btn btn-custom-yellow my-3" type="submit" name="action" value="{% trans 'Change password' %}"/>
+                    <input class="btn btn-warning my-3" type="submit" name="action" value="{% trans 'Change password' %}"/>
                 </div>
             </form>
         {% else %}
