--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -61,7 +61,7 @@
                 </p>
                 {% endif %}
                 <div class="d-flex justify-content-center">
-                    <a href="{% url 'view_basket' %}" class="btn btn-custom-yellow">
+                    <a href="{% url 'view_basket' %}" class="btn btn-warning">
                         <span class="text-uppercase">Checkout</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
