--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -64,13 +64,13 @@
                 </fieldset>
 
                 <div class="submit-button text-end mt-5 mb-2">
-                    <a href="{% url 'view_basket' %}" class="btn btn-custom-blue mb-1">
+                    <a href="{% url 'view_basket' %}" class="btn btn-primary mb-1">
                         <span>
                             <i class="fas fa-chevron-left"></i>
                         </span>
                         <span class="font-weight-bold">Adjust Basket</span>
                     </a>
-                    <button id="submit-button" class="btn btn-custom-yellow mb-1">
+                    <button id="submit-button" class="btn btn-warning mb-1">
                         <span class="font-weight-bold">Complete Order</span>
                         <span>
                             <i class="fas fa-lock"></i>
@@ -94,7 +94,7 @@
                     <h5 class="mt-2">Your Items ({{ product_count }})</h5>
                     <!-- View items collapse -->
                     <div class="mb-2">
-                        <a class="btn btn-custom-blue w-100 text-end" data-bs-toggle="collapse" href="#basket-summary"
+                        <a class="btn btn-primary w-100 text-end" data-bs-toggle="collapse" href="#basket-summary"
                             role="button" aria-expanded="false" aria-controls="basket-summary" id="collapse-toggle">
                             Click to view your Items <i class="fas fa-angle-down"></i>
                         </a>
