--- a/checkout/templates/checkout_success.html
+++ b/checkout/templates/checkout_success.html
@@ -175,7 +175,7 @@
             <div class="row">
                 <div class="col-12 col-lg-7 text-right">
                     {% if from_profile %}
-                    <a href="{% url 'profile' %}" class="btn btn-custom-yellow my-3">
+                    <a href="{% url 'profile' %}" class="btn btn-warning my-3">
                         <span class="me-2">
                             <i class="fas fa-angle-left"></i>
                         </span>
