--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -10,7 +10,7 @@
         <div class="col-12 hero-content text-center">
             <h1 class="mb-3">Gotta catch 'Em all</h1>
             <div>
-                <a href="{% url 'products' %}" class="btn btn-lg py3 btn-custom-blue shadow">SHOP NOW</a>
+                <a href="{% url 'products' %}" class="btn btn-lg py3 btn-primary shadow">SHOP NOW</a>
             </div>
         </div>
     </div>
