--- a/products/templates/add_product.html
+++ b/products/templates/add_product.html
@@ -26,8 +26,8 @@
                     {% endif %}
                 {% endfor %}
                 <div class="text-end mt-3">
-                    <a class="btn btn-custom-blue" href="{% url 'products' %}">Cancel</a>
-                    <button class="btn btn-custom-yellow" type="submit">Add Product</button>
+                    <a class="btn btn-primary" href="{% url 'products' %}">Cancel</a>
+                    <button class="btn btn-warning" type="submit">Add Product</button>
                 </div>
             </form>
         </div>
