--- a/templates/400.html
+++ b/templates/400.html
@@ -11,7 +11,7 @@
             <h1 class="my-4">400 error - Bad Request</h1>
             <p>Your request couldn't be understood by the server. Please check your input and try again. You can return
                 to the homepage using the button below. </p>
-            <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
+            <a href="{% url 'home' %}" class="btn btn-warning my-4"> Home</a>
 
         </div>
     </div>
