--- a/templates/404.html
+++ b/templates/404.html
@@ -11,7 +11,7 @@
             <h1 class="my-4">404 error - Not Found</h1>
             <p>The page you're looking for doesn't exist. Please check your URL and try again. You can return to the
                 homepage using the button below. </p>
-            <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
+            <a href="{% url 'home' %}" class="btn btn-warning my-4"> Home</a>
 
         </div>
     </div>
