--- a/templates/500.html
+++ b/templates/500.html
@@ -11,7 +11,7 @@
             <h1 class="my-4">500 Internal Server Error</h1>
             <p>Something went wrong on our end. Please try again later. You can return to the homepage using the button
                 below </p>
-            <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
+            <a href="{% url 'home' %}" class="btn btn-warning my-4"> Home</a>
 
         </div>
     </div>
