--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -18,7 +18,7 @@
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
 <div class="text-center">
-    <button type="submit" class="btn btn-custom-yellow my-3">{% trans 'Confirm' %}</button>
+    <button type="submit" class="btn btn-warning my-3">{% trans 'Confirm' %}</button>
 </div>
     
 </form>
