--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -41,7 +41,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
       {% if redirect_field_value %}
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
       {% endif %}
-      <button class="btn btn-custom-yellow my-3" type="submit">{% trans "Sign In" %}</button>
+      <button class="btn btn-warning my-3" type="submit">{% trans "Sign In" %}</button>
       <span><a class="button secondaryAction my-3" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a></span>
     </form>
   </div>
