--- a/templates/base.html
+++ b/templates/base.html
@@ -245,7 +245,7 @@
                                     </div>
                                     <div class="optionalParent">
                                         <div class="clear foot d-flex justify-content-center w-100">
-                                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-custom-yellow mx-0 my-0"
+                                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-warning mx-0 my-0"
                                                 value="Subscribe">
                                         </div>
                                     </div>
