--- a/templates/includes/confirm_delete_modal.html
+++ b/templates/includes/confirm_delete_modal.html
@@ -11,7 +11,7 @@
         Are you sure you want to delete this product?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-custom-yellow" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Cancel</button>
         <a class="btn btn-danger" href="{% url 'delete_product' product.id %}">Delete</a>
       </div>
     </div>
