--- a/products/templates/edit_product.html
+++ b/products/templates/edit_product.html
@@ -8,13 +8,13 @@
 {% block content %}
 <div class="container">
     <div class="row d-flex justify-content-center">
-        <div class="col-11 col-md-6 text-center mt-3 mb-3">
+        <div class="col-11 col-md-10 col-lg-8 text-center mt-3 mb-3">
             <h2><strong>Edit Product</strong></h2>
             <hr class="w-75 mb-1 mx-auto">
         </div>
     </div>
     <div class="row d-flex justify-content-center">
-        <div class="col-11 col-md-6 border rounded-4 bg-white shadow py-3 mb-3">
+        <div class="col-11 col-md-10 col-lg-8 border rounded-4 bg-white shadow py-3 mb-3">
             <form method="POST" action="{% url 'edit_product' product.id %}" enctype="multipart/form-data">
                 {% csrf_token %}
                 <!-- From done this way so we can remove field label -->
