--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -218,11 +218,13 @@ header {
 }
 .logo-text {
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 300;
+    font-family: var(--heading-font-alt);
 }
 
 .logo-tag-line {
     font-size: 1.5rem;
+    font-family: var(--heading-font-alt);
 }
 
 /* Search bar */
