--- a/basket/templates/basket.html
+++ b/basket/templates/basket.html
@@ -202,6 +202,18 @@
         }
         handleEnableDisable(itemId);
     } 
+    // Disable the buttons until page reloaded to stop btn spamming
+    function disableButtons() {
+        var decrementButtons = document.getElementsByClassName("decrement-qty");
+        for (var i = 0; i < decrementButtons.length; i++) {
+            decrementButtons[i].disabled = true;
+        }
+
+        var incrementButtons = document.getElementsByClassName("increment-qty");
+        for (var i = 0; i < incrementButtons.length; i++) {
+            incrementButtons[i].disabled = true;
+        }
+    }
 
     // Ensure proper enabling/disabling of all inputs on page load
     var allQtyInputs = $('.qty_input');
@@ -244,6 +256,7 @@
         handleEnableDisable(itemId);
         // Submit the form
         $(this).closest('form').submit();
+        disableButtons();
     });
 
     // Decrement quantity
@@ -256,6 +269,7 @@
         handleEnableDisable(itemId);
         // Submit the form
         $(this).closest('form').submit();
+        disableButtons();
     });
 
 </script>
@@ -267,4 +281,5 @@
     })
 
 </script>
+
 {% endblock %}
