--- a/templates/includes/confirm_delete_modal.html
+++ b/templates/includes/confirm_delete_modal.html
@@ -1,10 +1,10 @@
 <!-- Delete product confirmation Modal -->
-<div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel"
+<div class="modal fade" id="{{ prefix }}-confirmDeleteModal-{{ product.id}}" tabindex="-1" aria-labelledby="confirmDeleteModalLabel-{{ product.id }}"
   aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="confirmDeleteModalLabel">Delete Product?</h5>
+        <h5 class="modal-title" id="{{ prefix }}-confirmDeleteModalLabel-{{ product.id}}">Delete Product?</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
