Update base and index headings

--- a/templates/includes/confirm_delete_modal.html
+++ b/templates/includes/confirm_delete_modal.html
@@ -1,5 +1,5 @@
 <!-- Delete product confirmation Modal -->
-<div class="modal fade" id="{{ prefix }}-confirmDeleteModal-{{ product.id}}" tabindex="-1" aria-labelledby="confirmDeleteModalLabel-{{ product.id }}"
+<div class="modal fade" id="{{ prefix }}-confirmDeleteModal-{{ product.id}}" tabindex="-1" aria-labelledby="{{ prefix }}-confirmDeleteModalLabel-{{ product.id }}"
   aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
