--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -8,7 +8,7 @@
 <div class="container-fluid hero-section mt-2">
     <div class="row justify-content-center">
         <div class="col-12 hero-content text-center">
-            <h1 class="mb-3">Gotta catch 'Em all</h1>
+            <p class="home-tagline mb-3">Gotta catch 'Em all</p>
             <div>
                 <a href="{% url 'products' %}" class="btn btn-lg py3 btn-primary shadow">SHOP NOW</a>
             </div>
@@ -18,7 +18,7 @@
 <!-- New products -->
 <div class="container mt-5 bg-white rounded-4 px-4 py-4 feature-products">
     <section>
-        <h2 class="text-blue bold text-center">Latest Products</h2>
+        <h1 class="text-blue bold text-center">Latest Products</h1>
         <p class="d-none d-md-block text-center"><small class="text-muted">Check out our latest offerings</small></p>
         <div class="row mt-3 d-flex justify-content-center">
             {% for product in new_products %}
@@ -31,7 +31,7 @@
 <!-- Popular products -->
 <div class="container mt-5 bg-white rounded-4 px-4 py-4 mb-3 feature-products">
     <section>
-        <h2 class="text-blue bold text-center">Popular Products</h2>
+        <h1 class="text-blue bold text-center">Popular Products</h1>
         <p class="d-none d-md-block text-center"><small class="text-muted">Check out our most highly rated
                 products</small></p>
         <div class="row mt-3 d-flex justify-content-center">
