--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -360,7 +360,7 @@ header {
     margin: 17rem 0 1rem 0;
 }
 
-.hero-content h1 {
+.hero-content .home-tagline {
     font-family: var(--heading-font-alt);
     font-size: 2.4rem;
     font-weight: 100;
