--- a/templates/base.html
+++ b/templates/base.html
@@ -59,8 +59,8 @@
             <div class="col-12 col-lg-4 my-auto d-flex justify-content-start">
                 <a href="{% url 'home' %}" class="logo-link ms-2">
                     <div class="text-center">
-                        <h1 class="logo-text mb-0 pb-0"><strong>Pokémon TCG</strong></h1>
-                        <h2 class="logo-tag-line mt-0 pt-0">Ireland</h2>
+                        <p class="logo-text mb-0 pb-0"><strong>Pokémon TCG</strong></p>
+                        <p class="logo-tag-line mt-0 pt-0">Ireland</p>
                     </div>
                 </a>
             </div>
@@ -228,7 +228,7 @@
                                 action="https://herokuapp.us18.list-manage.com/subscribe/post?u=e162ff834ad07ab095bb85581&amp;id=f908fecc84&amp;f_id=006bc2e1f0"
                                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                                 target="_blank">
-                                <div id="mc_embed_signup_scroll text-center">
+                                <div id="mc_embed_signup_scroll">
                                     <p class="text-center mt-0">Keep up to date with all our latest product releases and deals!</p>
                                     <div class="mc-field-group w-75 mx-auto">
                                         <input type="email" name="EMAIL" class="required email"
@@ -282,17 +282,16 @@
     <script src="https://js.stripe.com/v3/"></script>
 
     <!-- Show toasts  -->
-    <script type="text/javascript">
+    <script>
         $(document).ready(function () {
             $('.toast').toast('show');
         });
     </script>
 
     <!-- Mailchimp -->
-    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
+    <script src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
     </script>
-    <script
-        type="text/javascript">
+    <script>
         (function ($) {
             window.fnames = new Array();
             window.ftypes = new Array();
