Remove unnecessary type from script elements

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -78,13 +78,13 @@
 {% block postloadjs %}
     {{ block.super }}
     <!-- From boutique_ado walkthrough -->
-    <script type="text/javascript">
+    <script>
 		$('.btt-link').click(function(e) {
 			window.scrollTo(0,0)
 		})
 	</script>
     <!-- From boutique_ado walkthrough -->
-    <script type="text/javascript">
+    <script>
         $('#sort-selector').change(function() {
             var selector = $(this);
             var currentUrl = new URL(window.location);
