--- a/templates/includes/top_nav_mobile.html
+++ b/templates/includes/top_nav_mobile.html
@@ -2,8 +2,8 @@
 <div class="text-center d-lg-none my-auto ms-3 mobile-logo">
     <a href="{% url 'home' %}" class="logo-link">
         <div class="text-center">
-            <h1 class="logo-text mb-0 pb-0 fs-4"><strong>Pokemon TCG</strong></h1>
-            <h2 class="logo-tag-line mt-0 pt-0 fs-4">Ireland</h2>
+            <p class="logo-text mb-0 pb-0 fs-4"><strong>Pokemon TCG</strong></p>
+            <p class="logo-tag-line mt-0 pt-0 fs-4">Ireland</p>
         </div>
     </a>
 </div>
