--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -105,7 +105,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <p class="mt-4">{{ product.description | safe }}</p>
+                <p class="mt-4">{{ product.description | striptags }}</p>
 
                 <!-- Add links for category, card set and expansion -->
                 {% if product.category %}
