Add prefix to product card and call

--- a/basket/templates/basket.html
+++ b/basket/templates/basket.html
@@ -23,7 +23,7 @@
 
 {% block content %}
 
-<h2 class="text-center mt-3"><strong>Your Basket</strong></h2>
+<h1 class="text-center text-blue mt-3"><strong>Your Basket</strong></h1>
 <hr class="w-75 mb-5 mx-auto">
 
 {% if basket_items %}
