--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -169,7 +169,7 @@
                 {% if request.user.is_superuser %}
                     <div class="text-end mb-3">
                         <a class="btn btn-warning" href="{% url 'edit_product' product.id %}">Edit</a>
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">Delete</button>
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#{{ prefix }}-confirmDeleteModal-{{ product.id }}">Delete</button>
                     </div>     
                 {% endif%}
             </div>
