Fix save info checkbox error

--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -43,18 +43,20 @@
                     {{ order_form.postcode | as_crispy_field }}
                     {{ order_form.country | as_crispy_field }}
 
+                    
+                    {% if user.is_authenticated %}
                     <div class="form-check form-check-inline float-right mr-0">
-                        {% if user.is_authenticated %}
                         <label class="form-check-label" for="id-save-info">Save this information to my
                             profile</label>
                         <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info">
-                        {% else %}
-                        <label class="form-check-label" for="id-save-info">
+                    </div>
+                    {% else %}
+                        <p class="text-center">
                             <a class="text-blue" href="{% url 'account_signup' %}">Create an account</a> or
                             <a class="text-blue" href="{% url 'account_login' %}">login</a> to save this information
-                        </label>
-                        {% endif %}
-                    </div>
+                        </p>
+                    {% endif %}
+                    
                 </fieldset>
                 <fieldset class="px-3">
                     <legend class="fieldset-label small w-auto"><strong>Payment</strong></legend>
